<resources>
    <string name="app_name">meetup2.0 courtApp</string>
    <string name="teama">MAN UTD</string>
    <string name="teamb">CHELSEA</string>
    <string name="freethrow">GOAL</string>
    <string name="us2">Y/C</string>
    <string name="us3">R/C</string>
    <string name="contentdescription">My Images</string>
    <string name="reset">RESET</string>
    <string name="zero">0</string>
</resources>
